--- a/examples/input.html
+++ b/examples/input.html
@@ -339,12 +339,10 @@
     </section>
 </article>
 <!--注意此段js必须第一引入在开发模式下-->
-<script type="text/javascript" src="/src/js/inner/input.js"></script>
-<script type="text/javascript" src="/src/js/inner/select.js"></script>
-<script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.dev.js"></script>
+<script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.min.js"></script>
 <script type="text/javascript">
     Nv.config({
-        baseUrl: "/",
+        cdnUrl: "/dist/cdn/",
         requestTime: true
     });
     Nv.ready(function () {
